<resources>
    <string name="app_name">Hanafuda</string>

    <string name="offline">单\n人\n模\n式</string>
    <string name="online">在\n线\n模\n式</string>
    <string name="help">帮\n助</string>
    <string name="about">关\n于</string>

    <string name="ipInput">请输入对手的IP</string>
    <string name="yourIp">你的IP</string>
    <string name="inputText">对手的IP</string>
    <string name="clientButton">加入游戏</string>
    <string name="serverButton">创建游戏</string>
    <string name="helpcontent">遇到问题去这修改：<a href="https://github.com/Epsilon314/Hanafuda">github</a></string>
</resources>
