<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.hanafuda.NetworkActivity">

    <ImageView
        android:id="@+id/NetworkloginImage"
        android:layout_width="721dp"
        android:layout_height="388dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login" />

    <EditText
        android:id="@+id/ipInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/ipInput"
        android:textColorHint="#FFFFF0"
        android:inputType="none"
        android:maxLength="40"
        android:textColor="#FFFFF0"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/whiteEditText"/>

    <Button
        android:id="@+id/clientButton"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="140dp"
        android:text="@string/clientButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/serverButton"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="140dp"
        android:text="@string/serverButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showYourIpAddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="110dp"
        android:textColor="#FFFFF0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/yourIp"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="136dp"
        android:layout_marginStart="96dp"
        android:gravity="center"
        android:text="@string/yourIp"
        android:textColor="#FFFFF0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="96dp"
        android:gravity="center"
        android:text="@string/inputText"
        android:textColor="#FFFFF0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
